further minor styling tweaks

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                 <div class="intro">
                     <h2>Aaron Beasley</h2>
 
-                    <p>Meet Aaron, one of our talented front end developpers.</p>
+                    <p>I’m Aaron Beasley, retired roughneck and future software engineer </p>
                 </div>
 
                 <div class="foot">
@@ -57,7 +57,7 @@
 
                 <div class="intro">
                     <h2>Brandy Becker</h2>
-                    <p>22 y.o female with a passion for programming, cats, and life itself.</p>
+                    <p>I'm a 22 year old Web Dev with a power for all Cats, Code, and Iced Coffee!</p>
                 </div>
 
                 <div class="foot">
@@ -76,7 +76,7 @@
                 <div class="intro">
                     <h2>Cameron Hawley</h2>
 
-                    <p>Meet Cameron one of our talented front-end developpers.</p>
+                    <p>I'm 26 years old. Other than coding, I am really into cars and motorcycles</p>
                 </div>
 
                 <div class="foot">
@@ -95,7 +95,10 @@
 
                 <div class="intro">
                     <h2> Dakota Marcinak </h2>
-                    <p>22 y.o female with a passion for programming, cats, and life itself! </p>
+                    <p>
+                        I'm 26 years old, and I can do a sick kickflip. 
+                        My dad says im pretty much the coolest kid in school. 
+                    </p>
                 </div>
 
                 <div class="foot">
@@ -108,12 +111,12 @@
                 <img src="img/Joseph.png" class="mug-shot" alt="image of a man">
 
                 <div class="role">
-                    <h2>Back-End Dev </h2>
+                    <h2>Back-End Dev</h2>
                 </div>
 
                 <div class="intro">
                     <h2>Joseph Graham</h2>
-                    <p>Lambda School Student: Full Stack Web Development - Cohort 25.</p>
+                    <p>I'm Joseph Graham, a 37yr old father of 2 full time, and a full time student. It takes skills to pull it off.</p>
                 </div>
 
                 <div class="foot">
@@ -131,7 +134,10 @@
 
                 <div class="intro">
                     <h2>Mohamed Gomri</h2>
-                    <p>Full Stack Web28. Has a taste for mathematics epecially logic & proof.</p>
+                    <p>
+                    
+                        What? you think I'm a nerd? See that red 1300 cc cruiser bike in the background? That's mine! 
+                    </p>
                 </div>
 
                 <div class="foot">
