--- a/service.html
+++ b/service.html
@@ -20,10 +20,10 @@
                 <p class="DevDesk">Lambda<br>DevDesk<br>Queue</p>
             </div>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Service</a>
-                <a href="#">Contact</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="service.html">Service</a>
+                <a href="hours-1.html">Hours</a>
             </nav>
         </div>
 
@@ -107,10 +107,10 @@
 
     <footer>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Service</a>
-            <a href="#">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="service.html">Service</a>
+            <a href="hours-1.html">Hours</a>
         </nav>
         <p>Copyright © 2020 DevDesk Team 3</p>
 
