--- a/hours-1.html
+++ b/hours-1.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <a href="https://go.lambdaschool.com/?utm_source=paid&utm_medium=google&utm_campaign=&campaignid=1147145732&utm_content=coding+bootcamps&adgroupid=53144480055&utm_term=lambda%20school&matchtype=e&device=c&placement=&network=g&creative=405208886792&src=adwords&ad=coding+bootcamps&gclid=EAIaIQobChMIk8_cq5e25wIViZWzCh3TLQ_6EAAYASAAEgKZTvD_BwE"><img src="/images/nav logo.png" alt="lambda school name and logo"></a>
+        <a href="https://go.lambdaschool.com/?utm_source=paid&utm_medium=google&utm_campaign=&campaignid=1147145732&utm_content=coding+bootcamps&adgroupid=53144480055&utm_term=lambda%20school&matchtype=e&device=c&placement=&network=g&creative=405208886792&src=adwords&ad=coding+bootcamps&gclid=EAIaIQobChMIk8_cq5e25wIViZWzCh3TLQ_6EAAYASAAEgKZTvD_BwE"><img src="images/nav logo.png" alt="lambda school name and logo"></a>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
